Add login functionality for existing customers
Add button on index to lead to customerLogin page
Add form to accept username and password
Verify username and password on database before allowing access
Redirect logged-in customers to personal home page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,9 @@
 		<h1>Welcome to Snack Shack!</h1>
 		<form action="register-customer" method="GET">
 			<button type="submit">Register Account</button>
-		</form>
+		</form><br>
+		<form action="login" method="GET">
+			<button type="submit">Login</button>
+		</form><br>
 	</body>
 </html>
