--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,10 +6,10 @@
 	</head>
 	<body>
 		<h1>Welcome to Snack Shack!</h1>
-		<form action="register-customer" method="GET">
+		<form th:action="@{/customer/register-customer}" method="GET">
 			<button type="submit">Register Account</button>
 		</form><br>
-		<form action="login" method="GET">
+		<form th:action="@{/customer/login}" method="GET">
 			<button type="submit">Login</button>
 		</form><br>
 	</body>
