--- a/src/main/resources/templates/registerCustomer.html
+++ b/src/main/resources/templates/registerCustomer.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Please provide your details:</h1>
-    <form method="POST" action="registration" >
+    <form method="POST" th:action="@{/customer/registration}" >
         <fieldset>
             <label>Please enter your username:</label><br>
             <input type="text" name="username" required ><br>
