--- a/src/main/resources/templates/complete.html
+++ b/src/main/resources/templates/complete.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Registration Complete!</h1>
+    <form th:action="@{/customer/login}" method="GET">
+        <button type="submit">Login</button>
+    </form><br>
 </body>
 </html>
