Add product registration functionality
- Index has link leading to Product Registration
- Product registration page creates new product and persists onto database
- Product-related pages have /product/ path

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,5 +12,9 @@
 		<form th:action="@{/customer/login}" method="GET">
 			<button type="submit">Login</button>
 		</form><br>
+		<form th:action="@{/product/add-product}" method="GET">
+			<button type="submit">Add New Product</button>
+		</form><br>
+
 	</body>
 </html>
