--- a/src/main/resources/templates/registerCustomer.html
+++ b/src/main/resources/templates/registerCustomer.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Registration</title>
+    <link rel="stylesheet" th:href="@{styles.css}">
 </head>
 <body>
+    <h1 class="page-title"><a th:href="@{/}">SNACK SHACK</a></h1>
     <h1>Please provide your details:</h1>
     <form method="POST" th:action="@{/customer/registration}" >
         <fieldset>
