--- a/src/main/resources/templates/addProduct.html
+++ b/src/main/resources/templates/addProduct.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add New Product</title>
+    <link rel="stylesheet" th:href="@{/styles.css}">
 </head>
 <body>
+    <h1 class="page-title"><a th:href="@{/}">SNACK SHACK</a></h1>
     <form method="POST" th:action="@{/product/add-product}">
         <fieldset>
             <label>Please enter the product name:</label><br>
