--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -3,6 +3,16 @@
 body{
     /* font-family: Arial, sans-serif; */
     font-family: "Poppins";
+    
+}
+
+.market{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: left;
+    margin: 1vh 0;
+    background-image: linear-gradient(to right, #e7d0ec, #b998ff);
 }
 
 .page-title{
