--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" th:href="@{/styles.css}">
 </head>
+
 <body>
     <h1 class="page-title"><a th:href="@{/}">SNACK SHACK</a></h1>
     <h1 th:text="'Welcome ' + ${session.customer.username}"></h1>
@@ -20,14 +22,62 @@
                 <p th:text="'Available stock: '+${product.stock}"></p>
                 <form th:action="@{/customer/addToCart(productId=${product.productID})}" method="post">
                     <input type="number" name="quantity" min="1">
-                    <button type="submit" >Add To Cart</button>
+                    <button type="submit">Add To Cart</button>
                 </form>
             </div>
+            <div id="cart-container" >
+                <table id="myList">
+                    <tr>
+                        <th>Product Name</th>
+                        <th>Quantity</th>
+                        <th>Price</th>
+                        <th>Subtotal</th>
+                    </tr>
+                    <tr th:each="cartItem : ${session.customer.cart.items}">
+                        <td th:text="${cartItem.product.productName}"></td>
+                        <td th:text="${cartItem.productQuantity}"></td>
+                        <td th:text="${cartItem.product.price}"></td>
+                        <td th:text="${cartItem.productSubtotal}"></td>
+                    </tr>
+                    <tr>
+                        <td colspan="3" text-align="right"><b>Cart Total:</b></td>
+                        <td th:text="${session.customer.cart.totalPrice}"></td>
+                    </tr>
+                </table>
+                <div>
+                    <form action="removeFromCart" method="POST">
+                        <select class="form-control"  id="dropdownProduct">
+                            <option value="0">select item</option>
+                            <option th:each="cartItem : ${session.customer.cart.items}" 
+                            th:value="${cartItem.product.productID}" th:text="${cartItem.product.productName}"></option>
+                        </select>
+                        <input type="number" id="removeQuantity" min="1" value="1">
+                        <button type="submit" id="removeFromCartButton">Remove from Cart</button>
+                    </form>
+                    
+                </div>
+                
+            </div>
+
+
+            <div class="cart-icon" id="toggle-cart-icon" onclick="toggleList()">
+                <img src="https://static-00.iconduck.com/assets.00/shopping-cart-icon-512x462-yrde1eu0.png" alt="Icon">
+            </div>
         </th:block>
-        <th:block th:unless="${session.isLoggedIn}"> 
+        <th:block th:unless="${session.isLoggedIn}">
             <p>Please login to view products.</p>
             <a href="@{/customer/login}">Login</a>
         </th:block>
     </div>
+    <script>
+        $(document).ready(function () {
+            $(".cart-icon").click(function (event) {
+                event.preventDefault(); // Prevent default link behavior
+                $("#cart-container").toggle(); // Toggle visibility
+            });
+        });
+
+    </script>
 </body>
+
 </html>
