Fix CSS formatting issues (minor) for complete.html and change background color

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -65,7 +65,7 @@ button{
     position: fixed;
     top: 25%;
     right: 0;
-    background-color: #e7d0ec;
+    background-color: #fdf2ff;
 }
 
 #myList, #likes{
