--- a/src/main/resources/templates/complete.html
+++ b/src/main/resources/templates/complete.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Complete</title>
-    <link rel="stylesheet" th:href="@{styles.css}">
+    <link rel="stylesheet" th:href="@{/styles.css}">
 </head>
 <body>
     <h1 class="page-title"><a th:href="@{/}">SNACK SHACK</a></h1>
