Add Orders functionality to application
Checking out carts now saves all items into an Order instance, consisting
of all items ordered, timestamp of the order creation, and the customer who
made the order.

The checkout feature is moved from the Cart to the OrderService class,
which handles the checking-out process

CartItems now are linked to an Order rather than the Cart, and CartItems
which have not been checked-out will have a null OrderID

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -80,7 +80,7 @@
                     <tr>
                         <!-- <td colspan="4"></td> -->
                         <td colspan="5" text-align="right" id="checkout-row">
-                            <form th:action="@{/customer/cartCheckout}" method="POST">
+                            <form th:action="@{/checkout}" method="POST">
                                 <b>Checkout:</b>
                                 <button type="submit">Checkout</button>
                             </form>
